day 16: dynamic resizing embeded video and fixed canvas height on mobile

--- a/web_new/css/main.css
+++ b/web_new/css/main.css
@@ -153,13 +153,6 @@
 	  opacity: 1;
 	}
 
-	.title {
-		margin-top: 3%;
-		grid-column: 4 / 16;
-		grid-row: 2 / 5;
-		z-index: 4;
-	}
-
 /*******************************************************************/	
 
 /* * * Mobile Specific Styles * * */
